  (Uwe Schindler, Christian Speich, Tony)
- Fixed possible triggering of buffer overflows inside glibc
  implementations of the fnmatch(), setlocale() and glob() functions. 
  Reported by Laurent gaffie. (Ilia)
- Fixed imagerectangle regression with 1x1 rectangle (libgd #106). (Pierre)
- Fixed htmlentities/htmlspecialchars not to accept partial multibyte
  sequences. (Stas)

- Fixed bug #42890 (Constant "LIST" defined by mysqlclient and c-client).
  (Andrey)
- Fixed bug #42869 (automatic session id insertion adds sessions id to
  non-local forms). (Ilia)
- Fixed bug #42818 ($foo = clone(array()); leaks memory). (Dmitry)
- Fixed bug #42817 (clone() on a non-object does not result in a fatal
  error). (Ilia)
- Fixed bug #42785 (json_encode() formats doubles according to locale rather  
  then following standard syntax). (Ilia)
- Fixed bug #42783 (pg_insert() does not accept an empty list for
  insertion). (Ilia)
- Fixed bug #42772 (Storing $this in a static var fails while handling a cast
  to string). (Dmitry)
- Fixed bug #42767 (highlight_string() truncates trailing comment). (Ilia)
- Fixed bug #42739 (mkdir() doesn't like a trailing slash when safe_mode is 
  enabled). (Ilia)
- Fixed bug #42699 (PHP_SELF duplicates path). (Dmitry)
- Fixed bug #42643 (CLI segfaults if using ATTR_PERSISTENT). (Ilia)
- Fixed bug #42629 (Dynamically loaded PHP extensions need symbols exported
  on MacOSX). (jdolecek at NetBSD dot org)
- Fixed bug #42627 (bz2 extension fails to build with -fno-common).
  (dolecek at netbsd dot org)
- Fixed Bug #42596 (session.save_path MODE option does not work). (Ilia)
- Fixed bug #42590 (Make the engine recognize \v and \f escape sequences). 
  (Ilia)
- Fixed bug #42587 (behavior change regarding symlinked .php files). (Dmitry)
- Fixed bug #42579 (apache_reset_timeout() does not exist). (Jani)
- Fixed bug #42549 (ext/mysql failed to compile with libmysql 3.23). (Scott)
- Fixed bug #42523 (PHP_SELF duplicates path). (Dmitry)